<resources>
    <string name="app_name">Party Planner</string>
    <string name="party_planner">Party Planner</string>
    <string name="hosting_a_party_done_right">Hosting a party done right</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="not_an_existing_user">Not an existing user?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="already_an_existing_user">Already an existing user?</string>
    <string name="design">Design</string>
    <string name="reset_password">Reset Password</string>
    <string name="want_to_go_back">Want to go back?</string>
    <string name="send_mail">Send mail</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">Profile picture</string>
    <string name="name">Name</string>
    <string name="events">EVENTS</string>
    <string name="hosted">Hosted</string>
    <string name="_12">12</string>
    <string name="attended">Attended</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="edit_details">Edit details</string>
    <string name="refresh">Refresh</string>
    <string name="street_and_unit">Street and Unit</string>
    <string name="city_and_state">City and State</string>
    <string name="pincode">Pincode</string>
    <string name="change_photo">Change photo</string>
    <string name="address1">Address:</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="tab1">Tab1</string>
    <string name="delete_account">Delete Account</string>
    <string name="drinks">Drinks</string>
    <string name="foods">Foods</string>
    <string name="preferences">PREFERENCES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="email">Email</string>
    <string name="send">send</string>
    <string name="my_templates">My Templates</string>
    <string name="_6_events">6 events</string>
    <string name="birthdays">Birthdays</string>
    <string name="wedding">Wedding</string>
    <string name="pizza">Pizza</string>
    <string name="christmas">Christmas</string>
    <string name="halloween">Halloween</string>
    <string name="dance">Dance</string>
    <string name="template_1">Template 1</string>
    <string name="template_2">Template 2</string>
    <string name="template_3">Template 3</string>
    <string name="template_4">Template 4</string>
    <string name="template_5">Template 5</string>
    <string name="template_6">Template 6</string>
    <string name="template_7">Template 7</string>
    <string name="template_8">Template 8</string>
    <string name="choose_a_template">Choose a Template</string>
    <string name="api_key">AIzaSyB_BQVCjXn_yvna3JUEd7O0VAKi2SUfpjI</string>
</resources>